--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: "Build UI service"
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
 permissions:
   id-token: write
