--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "eslint": "8.36.0",
     "eslint-config-next": "^14.0.4",
     "lodash": "^4.17.21",
+    "mapbox-gl": "^3.0.0",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-map-gl": "^7.1.6",
     "styled-components": "^5.3.9",
     "typescript": "5.0.2"
   },
